[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/brick.gd" type="Script" id=1]
[ext_resource path="res://Assets/Boss_brick.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]

resource_name = "Dead"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "Hit"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.320313, 0.0613098, 0.0613098, 1 ), Color( 1, 1, 1, 1 ), Color( 0.359375, 0.0715942, 0.0715942, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="brickBoss" type="Area2D" groups=[
"brick",
"Boss",
]]

pause_mode = 2
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Audio Bus", "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index" ]
HP = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Dead = SubResource( 2 )
anims/Hit = SubResource( 3 )
blend_times = [  ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="2"]

build_mode = 0
polygon = PoolVector2Array( -43.5, 2.75, -52.5, 2.5, -52.75, 12.75, -62.25, 13, -62.5, 22, -72.75, 23, -72.75, 43.25, -64, 43.25, -64, 52.5, -34, 52.5, -34, 62.5, -43.5, 62.5, -43.25, 84.75, 37.5, 84.25, 37.25, 62.75, 28, 62.75, 28, 52.75, 57, 53, 56.5, 43.5, 67, 44, 67.75, 21.75, 58, 22.25, 57.75, 13, 48.75, 12.5, 48.25, 2.5, 36.5, 2.25, 37.5, -7.5, 46.75, -7.5, 47.5, -28, 56.25, -26.5, 56.5, -36.5, 68, -36.5, 68, -47.1154, 77.25, -47.1154, 76, -87.8654, 65.75, -86.3654, 66.5, -67.8654, 56.75, -68.1154, 57, -58.1154, 27.5, -57.3654, 27.5, -67.8654, -34, -67.3654, -33.75, -58.3654, -62, -57.3654, -61.75, -68.3654, -72, -68.8654, -72.5, -86.8654, -84.5, -86.3654, -83.75, -47.1154, -73.5, -46.8654, -73.5, -37.3654, -63, -37.1154, -64, -25.8654, -52.5, -26.8654, -53.5, -7.36539, -43.5, -7.61539 )

[connection signal="body_entered" from="." to="." method="_on_brick_body_entered"]

[connection signal="changeColor" from="." to="." method="_on_brick_changeColor"]

[connection signal="dead" from="." to="." method="_on_Boss_dead"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


